# SDL-Git

./: .gitignore  Ai Design.txt  Box.h  Dot.h  Font.h  HeldKey.h  HeldKey.h.gch  Line.h  MyBase.h  Point.h  Point.h.gch  PointDelta.h  Rect.h  Texture.h  Wall.h  compile_and_run.sh  config.cfg  format.txt  level.txt  lines  main  main.cpp  meson.build  projects  test.txt  util.h  valgrind-out.txt
run/meson-logs/: meson-log.txt
source/: .depend  AlertTextHandler.cpp  AlertTextHandler.h  AppearingText.cpp  AppearingText.h  Astar.h  BackgroundElement.h  BoundedPoint.cpp  BoundedPoint.h  BoundedRect.h  Box.h  CollideBase.h  Color.cpp  Color.h  Controller.cpp  Controller.h  ControllerCommand.h  DataStructure.h  Dot.cpp  Dot.h  FOR_TESTING_ONLY.cpp  Font.h  GameInstance.cpp  GameInstance.h  HeldKey.cpp  HeldKey.h  Line.h  MyBase.cpp  MyBase.h  Point.cpp  Point.h  PointDelta.cpp  PointDelta.h  PositionLock.cpp  PositionLock.h  Rect.h  Screen.h  SuperTexture.h  TextHandler.cpp  TextHandler.h  (+9 more)
source/essential/: Configuration.cpp  Configuration.h  FileStructureAnalyzer.h  MathUtils.cpp  MathUtils.h  MegaBase.h  SDLUtil.cpp  SDLUtil.h  SDL_Headers.cpp  SDL_Headers.h  constants.h  log.cpp  log.h  misc.cpp  misc.h  random.cpp  random.h  typedefs.h  util.cpp  util.h
source/game_entities/: BackgroundElement.cpp  BackgroundElement.h  BackgroundGroup.cpp  BackgroundGroup.h  BackgroundMesh.h  BadTest.cpp  BadTest.h  BasicBullet.cpp  BasicBullet.h  BigWall.cpp  BigWall.h  Box.cpp  Box.h  CollideBaseFactory.cpp  CollideBaseFactory.h  CollideBaseGroup.cpp  CollideBaseGroup.h  DrawGroup.h  (+27 more)
(+89 files in other folders)
