project('sdl-git', 'cpp', default_options : ['cpp_std=c++17', 'warning_level=3'], version : 'Alpha')
add_global_arguments('-Werror', language : 'cpp')
sdl2 = dependency('SDL2')
sdl2_ttf = dependency('SDL2_ttf')
sdl2_image = dependency('SDL2_image')
sdl2_gfx = dependency('SDL2_gfx')
boost = dependency('boost')

subdir('source')

